# WGPU-Engine

./: .gitignore  Cargo.toml
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/app/: mod.rs
engine/src/engine/resource/: resource_manager.rs
game/: Cargo.toml
game/src/: lib.rs
res/: cheese.blend  cheese.blend1  cheese.gltf  cube.blend  cube.blend1  cube.glb
src/: main.rs
src/engine/resource/helper/gltf/: model.rs
src/engine/resource/instance/: standard_instance.rs
src/engine/resource/mesh/: standard_mesh.rs  t_mesh.rs
src/entities/: cheese.rs  cube.rs  main_scene.rs  mod.rs
