[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
log = "0.4"
winit = "0.28"
wgpu = "0.17"
toml = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
cgmath = "0.18"
pollster = "0.3.0"
